# MPI_Canny_edge

./: CMakeLists.txt  README.md  main.cpp
